Now it is compile

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,12 +1,12 @@
-cmake_minimum_required(VERSION 3.16.3)
+cmake_minimum_required(VERSION 3.9)
 project(chat_server)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-set(CMAKE_CXX_COMPILER "clang++-10")
+set(CMAKE_CXX_COMPILER "clang++")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++ -lc++abi")
-set(CMAKE_CXX_FLAGS "--stdlib=libc++ -Xclang")
+set(CMAKE_CXX_FLAGS "-fcoroutines-ts --stdlib=libc++")# -Xclang")
 
 find_package(Boost COMPONENTS system)
 
@@ -14,7 +14,10 @@ include_directories(
         ${BOOST_INCLUDE_DIRS}
 )
 
+
 add_executable(chat_server chat_server.cpp)
+
+message(${Boost_LIBRARIES})
 
 target_link_libraries(chat_server
         ${Boost_LIBRARIES}
