Try example with client and server -- works

--- a/my_zmq/CMakeLists.txt
+++ b/my_zmq/CMakeLists.txt
@@ -5,6 +5,10 @@ find_package(cppzmq)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(my_zmq main.cpp)
+add_executable(single_message main.cpp)
+add_executable(server server.cpp)
+add_executable(client client.cpp)
 
-target_link_libraries(my_zmq cppzmq)
+target_link_libraries(single_message cppzmq)
+target_link_libraries(server cppzmq)
+target_link_libraries(client cppzmq)
