--- a/GUI/CMakeLists.txt
+++ b/GUI/CMakeLists.txt
@@ -1,40 +1,47 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.16)
 project(GUI LANGUAGES CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
 
-add_definitions(-DQT_NO_FOREACH)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DQT_NO_FOREACH")
 
+find_package(folly REQUIRED)
+find_package(gflags REQUIRED)
+find_package(Threads REQUIRED)
 find_package(Qt5 COMPONENTS Widgets Multimedia REQUIRED)
+find_package(Boost 1.55 COMPONENTS system serialization REQUIRED)
 
-set(PROJECT_SOURCES
-        main.cpp
-        audio.cpp
-        login_widget.cpp
-        message.h
-        mock.cpp
-        model.cpp
-        move_item.cpp
-        producer.cpp
-        view.cpp
-        user.cpp)
+add_executable(${PROJECT_NAME}
+    main.cpp
+    audio.cpp audio.h
+    login_widget.cpp login_widget.h
+    message.cpp message.h
+    mock.cpp mock.h
+    model.cpp model.h model_fwd.h
+    move_item.cpp move_item.h
+    producer.cpp producer.h
+    view.cpp view.h
+    user.cpp user.h
+)
 
-set(PROJECT_LIBS
-        folly
-        dl
-        glog
-        pthread
-        gflags
-        event
-        fmt
-        double-conversion
-        iberty)
+qt5_use_modules(${PROJECT_NAME} Widgets Multimedia)
 
-add_executable(GUI ${PROJECT_SOURCES})
-target_link_libraries(GUI PRIVATE Qt5::Widgets Qt5::Multimedia ${PROJECT_LIBS})
+target_include_directories(${PROJECT_NAME} PUBLIC
+    ${folly_INCLUDE_DIRS}
+    ${Boost_INCLUDE_DIRS}
+)
+
+target_link_libraries(${PROJECT_NAME}
+    ${FOLLY_LIBRARIES}
+    ${QT_LIBRARIES}
+    ${Boost_LIBRARIES}
+)
