--- a/my_zmq/CMakeLists.txt
+++ b/my_zmq/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.16)
+
+set(CMAKE_CXX_COMPILER g++-10)
+
 project(my_zmq)
 
-find_package(cppzmq)
 find_package(Boost 1.55 REQUIRED system serialization)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -12,8 +14,13 @@ add_executable(client src/client.cpp src/my_utils.cpp)
 
 include_directories(include)
 
-target_link_libraries(single_message cppzmq)
-target_link_libraries(server cppzmq)
-target_link_libraries(client cppzmq)
-target_link_libraries(server boost_serialization)
-target_link_libraries(client boost_serialization)
+target_include_directories(single_message PUBLIC ${ZeroMQ_INCLUDE_DIR})
+target_include_directories(server PUBLIC ${ZeroMQ_INCLUDE_DIR})
+target_include_directories(client PUBLIC ${ZeroMQ_INCLUDE_DIR})
+
+target_link_libraries(single_message PUBLIC ${ZeroMQ_LIBRARY})
+target_link_libraries(server PUBLIC ${ZeroMQ_LIBRARY})
+target_link_libraries(client PUBLIC ${ZeroMQ_LIBRARY})
+target_link_libraries(server PUBLIC boost_serialization)
+target_link_libraries(client PUBLIC boost_serialization)
+
