This CMakeLists.txt compiles on my computer, locally

--- a/my_zmq/CMakeLists.txt
+++ b/my_zmq/CMakeLists.txt
@@ -1,9 +1,11 @@
 cmake_minimum_required(VERSION 3.16)
 
 set(CMAKE_CXX_COMPILER g++-10)
+set(CMAKE_CXX_FLAGS -pthread)
 
 project(my_zmq)
 
+find_package(cppzmq)
 find_package(Boost 1.55 REQUIRED system serialization)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -14,13 +16,15 @@ add_executable(client src/client.cpp src/my_utils.cpp)
 
 include_directories(include)
 
-target_include_directories(single_message PUBLIC ${ZeroMQ_INCLUDE_DIR})
-target_include_directories(server PUBLIC ${ZeroMQ_INCLUDE_DIR})
-target_include_directories(client PUBLIC ${ZeroMQ_INCLUDE_DIR})
+#target_include_directories(single_message PUBLIC ${ZeroMQ_INCLUDE_DIR})
+#target_include_directories(server PUBLIC ${ZeroMQ_INCLUDE_DIR})
+#target_include_directories(client PUBLIC ${ZeroMQ_INCLUDE_DIR})
 
-target_link_libraries(single_message PUBLIC ${ZeroMQ_LIBRARY})
-target_link_libraries(server PUBLIC ${ZeroMQ_LIBRARY})
-target_link_libraries(client PUBLIC ${ZeroMQ_LIBRARY})
+#target_link_libraries(single_message PUBLIC ${ZeroMQ_LIBRARY})
+#target_link_libraries(server PUBLIC ${ZeroMQ_LIBRARY})
+#target_link_libraries(client PUBLIC ${ZeroMQ_LIBRARY})
+target_link_libraries(single_message PUBLIC cppzmq)
+target_link_libraries(server PUBLIC cppzmq)
+target_link_libraries(client PUBLIC cppzmq)
 target_link_libraries(server PUBLIC boost_serialization)
 target_link_libraries(client PUBLIC boost_serialization)
-
