--- a/my_zmq/CMakeLists.txt
+++ b/my_zmq/CMakeLists.txt
@@ -9,25 +9,27 @@ find_package(Boost 1.51.0 COMPONENTS system serialization REQUIRED)
 find_path(ZMQ_INCLUDE_DIR zmq.h)
 find_library(ZMQ_LIBRARY NAMES zmq)
 
-add_executable(client src/client.cpp src/my_utils.cpp)
-add_executable(server src/server.cpp src/my_utils.cpp)
+add_executable(client src/client.cpp)
+add_executable(server src/server.cpp)
 
 target_include_directories(client PRIVATE
     include/
+    ../include/GUI
     ${ZMQ_INCLUDE_DIR}
 )
 target_include_directories(server PRIVATE
     include/
+    ../include/GUI
     ${ZMQ_INCLUDE_DIR}
 )
 
 target_link_libraries(client PRIVATE
-    boost_serialization
+    ${Boost_LIBRARIES}
     pthread
     ${ZMQ_LIBRARY}
 )
 target_link_libraries(server PRIVATE
-    boost_serialization
+    ${Boost_LIBRARIES}
     pthread
     ${ZMQ_LIBRARY}
 )
