--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -12,19 +12,23 @@ find_package(Boost 1.51.0 COMPONENTS system serialization REQUIRED)
 find_path(ZMQ_INCLUDE_DIR zmq.h)
 find_library(ZMQ_LIBRARY NAMES zmq)
 
-add_executable(server server.cpp ../src/Network/client.cpp ../src/GUI/message.cpp)
+add_executable(server
+    client.cpp
+    server.cpp
+    server_main.cpp
+    ../src/GUI/message.cpp
+)
 
 target_include_directories(server PRIVATE
-        ../include/GUI/
-        ../include/Network/
-        ${ZMQ_INCLUDE_DIR}
-        ${FOLLY_INCLUDE_DIR}
-        )
+    ../include/GUI/
+    ../include/Network/
+    ${Boost_INCLUDE_DIRS}
+    ${FOLLY_INCLUDE_DIR}
+    ${ZMQ_INCLUDE_DIR}
+)
 
 target_link_libraries(server PRIVATE
-        ${Boost_LIBRARIES}
-        pthread
-        ${QT_LIBRARIES}
-        ${ZMQ_LIBRARY}
-        ${FOLLY_LIBRARIES}
-        )
+    ${Boost_LIBRARIES}
+    ${FOLLY_LIBRARIES}
+    ${ZMQ_LIBRARY}
+)
